--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,8 @@
-baseURL = "http://www.recetasurfera.cl"
-languageCode = "en-us"
+baseURL = "https://www.recetasurfera.cl"
+languageCode = "es-cl"
 title = "Surf Prescriptions Chile"
 theme = "infinity-hugo"
+ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
 [params]
 
