--- a/config.toml
+++ b/config.toml
@@ -29,8 +29,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     [params.about]
         enable      = true
         heading     = "Distribuidores exclusivos de Surf Prescriptions en Chile"
-        description = "Surf Prescriptions es la marca del shaper Jeff 'Doc' Lausch, de Huntington Beach, California. Doc fábrica tablas hace 40 años, y las sigue fabricando él, sin relegar a terceros ni acudir a producción en masa en otros países. Usa los mejores materiales del mercado. Team riders incluyen Coco Nogales, CJ Kanuha, Donavon Frankenreiter, Vince Boulanger y Tyler Gunter."
-
+        description = "Surf Prescriptions es la marca del shaper Jeff 'Doc' Lausch, de Huntington Beach, California. Doc fábrica tablas hace 40 años, y las sigue fabricando él, sin relegar a terceros ni acudir a producción en masa en otros países. Usa los mejores materiales del mercado. Team riders incluyen Coco Nogales, CJ Kanuha, Donavon Frankenreiter, Vince Boulanger y Tyler Gunter. **Doc estará en Chile desde el 22 de Marzo al 3 de Abril fabricando tablas!**. Haz tu nave a medida, hecha por DOC en Chile!! Desde $450.000 pesos"
 
         [[params.about.sliderItem]]
             image   = "images/about/afiche.jpg"
@@ -39,8 +38,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     # Service Section
     [params.service]
         enable      = true
-        title       = "Find Better Solutions Build Better Products"
-        subtitle    = "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et"
+        title       = "Modelos de tablas Surf Prescriptions"
         [[params.service.serviceItem]]
             # give icon(themefisher icon font), title, description
             # more about themefisher icon font visit https://github.com/themefisher/themefisher-font
