Doc en Chile section

--- a/config.toml
+++ b/config.toml
@@ -8,10 +8,9 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
 
     # Navigation
     [params.navigation]
-        logo = "images/logo.png"
         home = "Inicio"
         about = "Quiénes somos"
-        service = "Catálogo"
+        service = "Doc en Chile"
         contact = "Contactanos"
 
     # Hero Area
@@ -29,7 +28,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     [params.about]
         enable      = true
         heading     = "Distribuidores exclusivos de Surf Prescriptions en Chile"
-        description = "Surf Prescriptions es la marca del shaper Jeff 'Doc' Lausch, de Huntington Beach, California. Doc fábrica tablas hace 40 años, y las sigue fabricando él, sin relegar a terceros ni acudir a producción en masa en otros países. Usa los mejores materiales del mercado. Team riders incluyen Coco Nogales, CJ Kanuha, Donavon Frankenreiter, Vince Boulanger y Tyler Gunter. **Doc estará en Chile desde el 22 de Marzo al 3 de Abril fabricando tablas!**. Haz tu nave a medida, hecha por DOC en Chile!! Desde $450.000 pesos"
+        description = "Surf Prescriptions es la marca del shaper Jeff 'Doc' Lausch, de Huntington Beach, California. Doc fábrica tablas hace 40 años, y las sigue fabricando él, sin relegar a terceros ni acudir a producción en masa en otros países. Usa los mejores materiales del mercado. Team riders incluyen Coco Nogales, Rafael Tapia, CJ Kanuha, Donavon Frankenreiter, Vince Boulanger y Tyler Gunter, entre otros. **Doc estará en Chile desde el 22 de Marzo al 3 de Abril fabricando tablas!. Haz tu nave a medida, hecha por DOC Contáctanos en recetasurfera@gmail.com**"
 
         [[params.about.sliderItem]]
             image   = "images/about/afiche.jpg"
@@ -38,13 +37,14 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
     # Service Section
     [params.service]
         enable      = true
-        title       = "Modelos de tablas Surf Prescriptions"
+        title       = "Haz tu nave con Doc"
+        subtitle    = "Una colaboracíon con Puntas del Sur y Olaf Shapes"
         [[params.service.serviceItem]]
             # give icon(themefisher icon font), title, description
             # more about themefisher icon font visit https://github.com/themefisher/themefisher-font
             # use delay for reveal items one by one
-            icon    = "tf-strategy"
-            title   = "Fully Responsive"
+            icon    = "tf-beaker"
+            title   = "Hecha a la medida"
             description = "Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut"
             delay   = "0s"
 
@@ -52,8 +52,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
             # give icon(themefisher icon font), title, description
             # more about themefisher icon font visit https://github.com/themefisher/themefisher-font
             # use delay for reveal items one by one
-            icon    = "tf-circle-compass"
-            title   = "Speed Optimized"
+            icon    = "tf-tools"
+            title   = "Doc shapea tu tabla"
             description = "Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut"
             delay   = "0.2s"
 
@@ -61,8 +61,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
             # give icon(themefisher icon font), title, description
             # more about themefisher icon font visit https://github.com/themefisher/themefisher-font
             # use delay for reveal items one by one
-            icon    = "tf-anchor2"
-            title   = "Tons of Feature"
+            icon    = "tf-ion-eye"
+            title   = "Live Shaping"
             description = "Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut"
             delay   = "0.4s"
 
@@ -70,8 +70,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
             # give icon(themefisher icon font), title, description
             # more about themefisher icon font visit https://github.com/themefisher/themefisher-font
             # use delay for reveal items one by one
-            icon    = "tf-globe"
-            title   = "Fully SEO Optimized"
+            icon    = "tf-chat"
+            title   = "Meet and greet DOC"
             description = "Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut"
             delay   = "0.6s"
         
@@ -79,8 +79,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
             # give icon(themefisher icon font), title, description
             # more about themefisher icon font visit https://github.com/themefisher/themefisher-font
             # use delay for reveal items one by one
-            icon    = "tf-strategy"
-            title   = "Fully Responsive"
+            icon    = "tf-circle-compass"
+            title   = "Materiales Premium"
             description = "Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut"
             delay   = "0.8s"
 
@@ -88,8 +88,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
             # give icon(themefisher icon font), title, description
             # more about themefisher icon font visit https://github.com/themefisher/themefisher-font
             # use delay for reveal items one by one
-            icon    = "tf-circle-compass"
-            title   = "Speed Optimized"
+            icon    = "tf-book-open"
+            title   = "Personal de apoyo calificado"
             description = "Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut"
             delay   = "1s"
 
@@ -97,8 +97,8 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
             # give icon(themefisher icon font), title, description
             # more about themefisher icon font visit https://github.com/themefisher/themefisher-font
             # use delay for reveal items one by one
-            icon    = "tf-anchor2"
-            title   = "Tons of Feature"
+            icon    = "tf-ion-clock"
+            title   = "Cupos limitados"
             description = "Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut"
             delay   = "1.2s"
 
@@ -106,20 +106,12 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
             # give icon(themefisher icon font), title, description
             # more about themefisher icon font visit https://github.com/themefisher/themefisher-font
             # use delay for reveal items one by one
-            icon    = "tf-globe"
-            title   = "Fully SEO Optimized"
+            icon    = "tf-ion-social-instagram-outline"
+            title   = "Síguenos en redes sociales"
             description = "Lorem ipsum dolor sit amet, con-sectetur adipisicing elit, sed do eiusmod tempor incididunt ut"
             delay   = "1.5s"
     
-    
-    # Call to Action Section
-    [params.cta]
-        enable      = true
-        bg          = "images/call-to-action.jpg"
-        title       = "Subscribe to our mailing list"
-        subtitle    = "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod"
-
     [params.contact]
         enable      = true
-        title       = "Get In Touch"
-        subtitle    = "Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex"
+        title       = "Escribénos"
+        subtitle    = "Pra más detalles, escribenos a recetasurfera@gmail.com"
