--- a/config.toml
+++ b/config.toml
@@ -17,7 +17,7 @@ ignoreFiles = ["\\.Rmd$", "\\.Rmarkdown$", "_files$", "_cache$"]
         enable      = true
         bg          = "images/doc shaperoom.jpg"
         title       = "Jeff 'Doc' Lausch en Chile!"
-        subtitle    = "Haz tu tabla soñada a la medida. Cupos limitados"
+        subtitle    = "Haz tu tabla soñada a la medida. Cupos limitados."
         btnText     = "Más información"
         countdownYear = "2019"
         countdownMonth = "03"
